# ym38x6

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  spec-app.md  spec-sound.md  spec.md
gesture-app/: package-lock.json  package.json
gesture-app/src/: index.html  main.js
gesture-app/src-tauri/: Cargo.toml  tauri.conf.json
gesture-app/src-tauri/src/: main.rs  settings.rs  ym38x6_dto.rs
sound-core/: Cargo.toml
sound-core/src/: lfo.rs  lib.rs
sound-core/src/effects/: chorus.rs  mod.rs  reverb.rs
sound-core/tests/: lfo.rs  wave_convert.rs  waveform_shapes.rs
tools/opm2x6/: Dockerfile  README.md  convert.py  sample.opm
tools/psr2x6/: Cargo.toml
tools/psr2x6/src/: conv.rs  main.rs
wms1-core/: Cargo.toml
wms1-core/src/: lib.rs
wms1-core/tests/: adsr_envelope.rs  choke.rs  performance_lfo.rs  polyphony.rs  preset_waveforms.rs  retrigger.rs
wms1-vst/: Cargo.toml
wms1-vst/src/: lib.rs
ym38x6-app/: package-lock.json  package.json
ym38x6-app/src/: main.js
ym38x6-app/src-tauri/: Cargo.toml  tauri.conf.json
ym38x6-app/src-tauri/capabilities/: default.json
ym38x6-app/src-tauri/src/: main.rs  settings.rs
ym38x6-core/: Cargo.toml  THIRD_PARTY_NOTICES.md
ym38x6-core/src/: algorithm.rs  filter.rs  lib.rs  mapping.rs  operator.rs  preset.rs  tone_lfo.rs  waveform.rs
ym38x6-core/tests/: choke.rs  release_tail.rs  retrigger.rs  waveform_memory.rs
ym38x6-engine/: Cargo.toml
ym38x6-engine/src/: lib.rs
ym38x6-vst/: Cargo.toml
ym38x6-vst/src/: lib.rs
