[package]
name = "gesture-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
cpal = "0.15"
ym38x6-core = { path = "../../ym38x6-core" }
serde = { version = "1", features = ["derive"] }
