[package]
name = "psr2x6"
version = "0.1.0"
edition = "2021"
publish = false

# PSR-70（OPQ/YM3806）の音色データを .38x6 プリセットバンクJSONへ変換する
# 開発ツール。ym38x6-core の正規型(Ym38x6Patch/PresetFile)を再利用し、
# 出力JSONがエンジンの読込スキーマと一致することを保証する。
# 入力(def_seqs.h等)・出力(.38x6)は本クレートには同梱しない（パスは引数指定）。

[[bin]]
name = "psr2x6"
path = "src/main.rs"

[dependencies]
ym38x6-core = { path = "../../ym38x6-core" }
